# phri_collarobot

./: .gitignore  CLAUDE.md  README.md  requirements.txt  setup.cfg
.github/workflows/: ci.yml
collarobot_actions/: package.xml  setup.cfg  setup.py
collarobot_actions/collarobot_actions/: gesture_node.py  gestures.toml  goto_carriage_lift.py  goto_position.py  pick_place_node.py  positions.toml  record_position.py  test_gripper.py
collarobot_actions/collarobot_actions/utils/: goto_carriage_lift.py  goto_position.py  record_gesture.py  record_position.py  test_gripper.py
collarobot_actions/launch/: collarobot_actions.launch.py
collarobot_controller/: OPERATOR_GUIDE.md  package.xml  setup.cfg  setup.py
collarobot_controller/collarobot_controller/: controller_flow.py  flow.py  models.py  motion_coordinator_node.py
collarobot_controller/data/: ingredients.json  ingredients_mapping.toml  inverted_index.json  recipes.json
collarobot_controller/test/: test_ingredient_prediction.py  test_pick_action.py
collarobot_msgs/: CMakeLists.txt  package.xml
collarobot_msgs/action/: Gesture.action  MoveIngredient.action  PickPlace.action
collarobot_perception/: package.xml  setup.cfg  setup.py
collarobot_perception/collarobot_perception/: debug_capture.py  detect_zones.py  state_detection.py  stream_camera.py  take_image.py  transform_ArUco_tags.py  transformation.py
collarobot_perception/test/: test_marker_zones.py  test_stabilization.py  test_state_detection.py
